<?xml version="1.0"?>
<package format="2">
  <name>storm32bgc_ros_data_sample</name>
  <version>0.1.0</version>
  <description>Sample code for reading all data of Storm32Bgc gimbal controller</description>

  <maintainer email="haiha95@mail.ulsan.ac.kr">haiha95</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
</package>
